refactor: EnumHelper enhance act2

--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -70,7 +70,7 @@ Best: @game.Scores.Item2.ToString("F2")s
         }
     }
 
-  public static readonly Dictionary<Direction, Domain01> Qqq = EnumHelper.Www<Domain01>([
+  public static readonly Dictionary<Direction, Domain01> Qqq = EnumHelper.Www<Direction, Domain01>([
       new() { SystemDef = "h", Icon = "⬅" },
       new() { SystemDef = "j", Icon = "⬇" },
       new() { SystemDef = "k", Icon = "⬆" },
