--- a/Components/GridV3.razor.css
+++ b/Components/GridV3.razor.css
@@ -1,6 +1,11 @@
-/* Static styles for GridV2 component */
+/* Static styles for GridV3 component */
 /* Note: grid-template-columns and grid-template-rows are in the .razor file
    because they use Razor syntax (@Game.GridSize) which doesn't work in .css files */
+
+/* V3 Enhancements:
+   - Droppables appear as blue dots (like V2 player)
+   - Collected droppables turn the cell black (like V2 droppable background)
+*/
 
 #grid {
   display: grid;
@@ -14,12 +19,23 @@
   text-align: center;
 }
 
+/* Player styling - white square */
 .player::after {
   content: '▢';
   font-size: 60px;
+  color: #0066cc;
   line-height: 60px;
 }
 
-.droppable {
+/* Droppable styling - blue dot (same as V2 player) */
+.droppable::after {
+  content: '●';
+  font-size: 60px;
+  color: #0066cc;
+  line-height: 53px;
+}
+
+/* Collected state - black background (same as V2 droppable) */
+.collected {
   background-color: black;
 }
